Update and rename newsite.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS-my site/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
 
   </head>
     <body>
 
     <div class="intro">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud photo">
+      <img class="top-cloud" src="cloud.png" alt="cloud photo">
       <h1>I am Sai Kalyan</h1>
       <h2>A teacher</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud photo">
@@ -21,13 +21,13 @@
     </div>
 <hr>
     <div class="selfintro">
-      <img src="images/saikalyan.png" alt="sai photo" height="200px;" width="200px;">
+      <img src="saikalyan.png" alt="sai photo" height="200px;" width="200px;">
       <h2>Hi  There!</h2>
       <h2>Welcome </h2>
     </div>
 <hr>
 <div class="reading">
-    <img class="readbook" src="images/bookreading.png" alt="book reading photo" height="200px;" width="200px;">
+    <img class="readbook" src="bookreading.png" alt="book reading photo" height="200px;" width="200px;">
     <h2>Book Reading</h2>
     <p>I love reading books. As of now i have read 4books which helped me alot in developing myself.</p>
     <ul class="list">
@@ -39,7 +39,7 @@
 </div>
 <hr>
 <div class="bikeriding">
-  <img class="bike" src="images/bikeriding.png" alt="bike photo" height="200px;" width="200px;">
+  <img class="bike" src="bikeriding.png" alt="bike photo" height="200px;" width="200px;">
   <h2>I like riding new bikes.</h2>
   <p>I have keen interest for bikes. Recently i have bought a new bike Honda Hornet 2.O</p>
   <p>The things which i like in my bike are </p>
@@ -51,7 +51,7 @@
 </div>
 <hr>
 <div class="chef">
-  <img class="cook" src="images/chef.png" alt="chef photo" height="200px;" width="200px;">
+  <img class="cook" src="chef.png" alt="chef photo" height="200px;" width="200px;">
   <h2>I'm a foodie.</h2>
   <p>Although I have samll apetite i would love to eat. Not only eating i would love to cook food.</p>
   <p>I love non-veg food.</p>
@@ -67,7 +67,7 @@
   </div>
 <hr>
 <div class="dataentry">
-  <img class="data" src="images/dataentry.png" alt="data entry" height="200px;" width="200px;">
+  <img class="data" src="dataentry.png" alt="data entry" height="200px;" width="200px;">
 
   <h2>Computer Skills</h2>
 
