--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <img class="top-cloud" src="cloud.png" alt="cloud photo">
       <h1>I am Sai Kalyan</h1>
       <h2>A teacher</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud photo">
-      <img class="mountain" src="images/mountain.png" alt="mountain photo">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud photo">
+      <img class="mountain" src="mountain.png" alt="mountain photo">
     </div>
 <hr>
     <div class="selfintro">
